# citra

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  license.txt
.travis/: branch.sh  tag.sh
.travis/common/: travis-ci.env
.travis/linux/: docker.sh
.travis/linux-frozen/: docker.sh
.travis/linux-mingw/: docker.sh  scan_dll.py
.travis/macos/: build.sh  deps.sh  upload.sh
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  audio_types.h  codec.h  dsp_interface.cpp  dsp_interface.h
src/audio_core/hle/: decoder.cpp  decoder.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h  ffmpeg_dl.cpp  ffmpeg_dl.h  filter.cpp  hle.cpp  hle.h  shared_memory.h  source.cpp  source.h
src/audio_core/lle/: lle.cpp  lle.h
src/citra/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  bootmanager.cpp  bootmanager.h  cheats.cpp  cheats.h  control_panel.cpp  control_panel.h  hotkeys.cpp  hotkeys.h  issues_map.h  logging_window.cpp  logging_window.h  logging_window.ui  main.cpp  main.h  main.ui  mii_selector.cpp  program_list.cpp  program_list_p.h  program_list_worker.cpp  qt_backend.h  ui_settings.cpp  ui_settings.h
src/citra/applets/: mii_selector.cpp  mii_selector.h  swkbd.cpp  swkbd.h
src/citra/camera/: qt_multimedia_camera.cpp  qt_multimedia_camera.h
src/citra/configuration/: audio.cpp  audio.h  audio.ui  camera.cpp  camera.h  camera.ui  config.cpp  config.h  configure_dialog.cpp  configure_graphics.cpp  configure_graphics.h  configure_graphics.ui  configure_system.cpp  configure_ui.cpp  configure_ui.ui  dialog.cpp  dialog.h  dialog.ui  general.cpp  general.h  general.ui  graphics.cpp  graphics.h  graphics.ui  hacks.cpp  hacks.h  hacks.ui  hotkeys.cpp  hotkeys.h  hotkeys.ui  input.cpp  input.h  input.ui  lle.cpp  lle.h  lle.ui  motion_touch.cpp  motion_touch.h  motion_touch.ui  system.cpp  (+5 more)
src/citra/multiplayer/: chat_room.cpp  chat_room.h  chat_room.ui  client_room.cpp  client_room.h  direct_connect.cpp  direct_connect.h  direct_connect.ui  host_room.cpp  host_room.h  host_room.ui  lobby.cpp  lobby.h  lobby.ui  lobby_p.h  message.cpp  message.h  moderation_dialog.cpp  state.cpp  state.h  validation.h
src/citra/util/: util.cpp
src/citra/util/sequence_dialog/: sequence_dialog.cpp  sequence_dialog.h
src/common/: CMakeLists.txt  cityhash.cpp  cityhash.h  common_paths.h  common_types.h  file_util.cpp  file_util.h  hash.h  param_package.cpp  ring_buffer.h  thread.h  threadsafe_queue.h
src/common/logging/: backend.cpp  backend.h  log.h  text_formatter.cpp  text_formatter.h
src/core/: CMakeLists.txt  announce_multiplayer_session.h  core.cpp  core.h  core_timing.cpp  core_timing.h  input.h  memory.cpp  memory.h  memory_setup.h  movie.cpp  movie.h  perf_stats.h  settings.cpp  settings.h
src/core/cheats/: cheats.cpp  gateway_cheat.cpp
src/core/cpu/: cpu.cpp  cpu.h
src/core/file_sys/: archive_backend.cpp  archive_backend.h  archive_extsavedata.cpp  archive_extsavedata.h  archive_ncch.cpp  archive_ncch.h  archive_sdmc.cpp  archive_sdmc.h  archive_sdmcwriteonly.cpp  archive_sdmcwriteonly.h  archive_selfncch.cpp  archive_selfncch.h  delay_generator.cpp  errors.h  file_backend.h  ivfc_archive.cpp  ivfc_archive.h  ncch_container.cpp  ncch_container.h  path_parser.h  savedata_archive.cpp  savedata_archive.h  seed_db.cpp  seed_db.h
src/core/hle/: ipc.h  ipc_helpers.h  lock.h  result.h
src/core/hle/applets/: applet.h  erreula.cpp  erreula.h  mii_selector.cpp  mii_selector.h  mint.cpp  mint.h  swkbd.cpp  swkbd.h
src/core/hle/kernel/: address_arbiter.cpp  client_session.h  errors.h  handle_table.cpp  handle_table.h  hle_ipc.cpp  hle_ipc.h  ipc.cpp  kernel.h  memory.cpp  memory.h  mutex.h  object.h  process.cpp  process.h  resource_limit.h  semaphore.h  server_port.h  server_session.h  session.h  shared_memory.cpp  shared_memory.h  shared_page.cpp  shared_page.h  svc.cpp  svc_wrapper.h  thread.cpp  thread.h  timer.cpp  timer.h  vm_manager.cpp  vm_manager.h  wait_object.cpp  wait_object.h
src/core/hle/service/: service.cpp
src/core/hle/service/ac/: ac.cpp
src/core/hle/service/act/: act.cpp  act.h
src/core/hle/service/am/: am.cpp  am.h  am_net.cpp  am_sys.cpp  am_u.cpp
src/core/hle/service/boss/: boss.cpp  boss.h  boss_p.cpp  boss_u.cpp
src/core/hle/service/cam/: cam.cpp
src/core/hle/service/cecd/: cecd.cpp  cecd.h
src/core/hle/service/cfg/: cfg.cpp  cfg.h
src/core/hle/service/dsp/: dsp_dsp.cpp  dsp_dsp.h
src/core/hle/service/frd/: frd.cpp  frd.h  frd_a.cpp  frd_u.cpp
src/core/hle/service/fs/: archive.cpp  archive.h  file.cpp  fs_user.cpp
src/core/hle/service/gsp/: gsp.cpp  gsp.h  gsp_gpu.cpp  gsp_gpu.h
src/core/hle/service/hid/: hid.cpp
src/core/hle/service/http/: http_c.cpp  http_c.h
src/core/hle/service/ir/: extra_hid.cpp  ir_user.cpp
src/core/hle/service/ldr_ro/: cro_helper.cpp  cro_helper.h  ldr_ro.cpp
src/core/hle/service/mic/: mic_u.cpp
src/core/hle/service/nfc/: nfc.cpp  nfc.h  nfc_m.cpp  nfc_u.cpp
src/core/hle/service/nim/: nim_aoc.cpp
src/core/hle/service/ns/: applet_manager.cpp  applet_manager.h  apt_a.cpp  apt_a.h  apt_s.cpp  apt_s.h  apt_u.cpp  apt_u.h  ns.cpp  ns.h  ns_s.cpp
src/core/hle/service/nwm/: nwm_ext.cpp  nwm_uds.cpp  nwm_uds.h  uds_beacon.cpp  uds_beacon.h  uds_connection.cpp  (+2 more)
src/core/hw/: gpu.cpp  gpu.h  lcd.h  y2r.cpp  y2r.h
src/core/loader/: loader.h  ncch.cpp  ncch.h
src/core/rpc/: packet.h  rpc_server.cpp  rpc_server.h  server.cpp
src/dedicated_room/: CMakeLists.txt  citra-room.cpp
src/input_common/: motion_emu.cpp
src/input_common/sdl/: sdl_impl.cpp
src/input_common/udp/: client.cpp  client.h  protocol.h
src/lobby/: api.cpp
src/network/: CMakeLists.txt  message.cpp  message.h  packet.cpp  room.cpp  room.h  room_member.cpp  room_member.h
src/video_core/: command_processor.cpp  geometry_pipeline.h  regs_lighting.h  regs_pipeline.h  vertex_loader.cpp  video_core.cpp
src/video_core/renderer/: rasterizer.cpp  rasterizer.h  rasterizer_cache.cpp  rasterizer_cache.h  renderer.cpp  shader_decompiler.cpp  shader_gen.cpp
src/video_core/shader/: check_sse4_1.cpp
(+12 files in other folders)
